dark mode, how to play, balance speed

--- a/index.html
+++ b/index.html
@@ -14,12 +14,21 @@
     </div>
     
     <div class="stage">
+        <div class="how2play">
+            <h2>How to play</h2>
+            <br><br>
+            <p>↑ move up</p>
+            <p>→ move right</p>
+            <p>↓ move down</p>
+            <p>← move left</p>
+        </div>
         <canvas id="board"></canvas>
         <div class="data">
             <div class="score-position"><p>Score: </p><span id="score"></span></div>
             <a class="retry" href="">retry</a>
         </div>
     </div>
+    
     <script src="main.js"></script>
 </body>
 </html>
